# oombra

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLA.md  COMPLIANCE.md  CONTRIBUTORS.md  Caddyfile  DATA_LICENSE.md  Dockerfile  README.md  THREAT_MODEL.md  TODOS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
data/: MANIFEST.json
data/feeds/: bazaar_hashes.txt  emergingthreats.txt  hybrid_analysis.json  ipsum.txt  jpcert.json  spamhaus_drop.txt  ssl_blacklist.csv  threatfox.csv  urlhaus.csv
demo/: all_evaluations.json  apt28_campaign.stix.json  asciinema_demo.sh  attack_map_apt28.json  attack_map_lockbit.json  demo.sh  eval_crowdstrike.json  eval_palo_alto_prisma_cloud.json  eval_report.txt  eval_sentinelone.json  eval_splunk.json  eval_wiz.json  evaluations.csv  ioc_bundle_1.json  ioc_bundle_2.json  nur-demo.cast  record_trustless.sh  run_demo.sh  scrape_real_intel.py  seed_and_serve.sh  vigil-demo.cast
demo/seed/: ioc_bundle_05.json  ioc_bundle_06.json  ioc_bundle_07.json  ioc_bundle_08.json  ioc_bundle_09.json  ioc_bundle_10.json  ioc_bundle_11.json
docs/: yc-application.md
docs/strategy/: README.md  data-flow.md  flywheel.md  gtm-channels.md  kumu-edges.csv  kumu-nodes.csv  revenue-model.md  stakeholder-map.md
nur/: anonymize.py  behavioral_dp.py  cli.py  feeds.py  intelligence.py  keystore.py  privacy.py  sec_breach.py  secrets.py  simulator.py  vendors.py
nur/feeds/: mitre_evals.py  pacer.py
nur/scrapers/: sources.py
nur/server/: app.py  db.py  email.py  models.py  notifications.py  proofs.py
nur/tests/: test_attack_intelligence.py  test_contribute_web.py  test_email.py  test_integrations.py  test_keystore.py  test_mitre_evals.py  test_pacer.py  test_scrapers_unit.py  test_sec_scraper.py  test_secagg.py  test_secrets.py  test_trustless.py  test_vci.py  test_vendors.py  test_verticals.py
nur/vci/: __init__.py  aggregation.py  bounds.py  envelope.py  histograms.py  platform.py  share_proofs.py  trust_graph.py
oombra/: __init__.py  anonymize.py  audit.py  cli.py  client.py  dp.py  extract.py  feeds.py  keystore.py  protocol.py  psi.py  review.py  secagg.py
oombra/attest/: __init__.py  chain.py  pipeline.py  stages.py
oombra/fl/: __init__.py  aggregator.py  client.py  server.py
oombra/graph/: __init__.py  embeddings.py  local.py
oombra/scrapers/: __init__.py  av_comparatives.py  capterra.py  g2.py  gartner.py  github_oss.py  sources.py  stackexchange.py  trustradius.py
oombra/server/: __init__.py  app.py  db.py  models.py
oombra/tests/: __init__.py  demo_data.py  test_anonymize.py  test_attest.py  test_dp.py  test_extract.py  test_fl.py  test_graph.py  test_models.py  test_secagg.py  test_zkp.py
oombra/zkp/: __init__.py  contrib_proofs.py  proofs.py
scripts/: smoke-image.sh
vigil/: __init__.py  anonymize.py  audit.py  cli.py  client.py  dp.py  extract.py  feeds.py  keystore.py  models.py  psi.py  verticals.py
vigil/attest/: __init__.py  commitments.py  pipeline.py  verify.py
vigil/data/: capabilities.json  integrations.json  mitre_map.json
vigil/fl/: __init__.py  models.py  protocol.py
vigil/graph/: __init__.py  correlate.py  federated.py  (+2 more)
(+56 files in other folders)
