[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oombra"
version = "0.1.0"
description = "Privacy-preserving federated threat intelligence and attack map sharing"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
pdf  = ["pypdf>=4.0"]
stix = ["stix2>=3.0"]
misp = ["pymisp>=2.4"]
all  = ["pypdf>=4.0", "stix2>=3.0", "pymisp>=2.4"]

[project.scripts]
oombra = "oombra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["oombra"]
