[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nur"
version = "0.2.0"
description = "Privacy-preserving federated threat intelligence and attack map sharing"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
pdf       = ["pypdf>=4.0"]
stix      = ["stix2>=3.0"]
misp      = ["pymisp>=2.4"]
server    = ["fastapi>=0.115", "uvicorn>=0.30", "sqlalchemy>=2.0", "aiosqlite>=0.20", "python-multipart>=0.0.9", "httpx>=0.27"]
server-pg = ["asyncpg>=0.29", "psycopg2-binary>=2.9"]
crypto    = ["cryptography>=42.0"]
fl        = ["numpy>=1.24", "flwr>=1.5", "torch>=2.0"]
fl-lite   = ["numpy>=1.24", "flwr>=1.5", "scikit-learn>=1.3"]
graph     = ["numpy>=1.24", "networkx>=3.0", "torch-geometric>=2.4"]
zkp       = ["py_ecc>=6.0"]
dev       = ["numpy>=1.24", "pytest>=8.0", "pytest-asyncio>=1.0", "pytest-cov>=5.0", "hypothesis>=6.0", "ruff>=0.4", "bandit>=1.7"]
all       = [
    "nur[server,crypto,pdf,stix,misp]",
    "numpy>=1.24",
]

[project.scripts]
nur = "nur.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nur"]

[tool.pytest.ini_options]
testpaths = ["nur/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
